--- a/Sentiment_Analysis_using_LSTM_pytorch.ipynb
+++ b/Sentiment_Analysis_using_LSTM_pytorch.ipynb
@@ -703,7 +703,7 @@
         "  epoch_loss = 0.0\n",
         "  epoch_accuracy = 0.0\n",
         "  cou = 0\n",
-        "  optimizer = optim.Adam(filter(lambda p: p.requires_grad, model.parameters()))\n",
+        "  optimizer = optim.Adam(model.parameters())\n",
         "  model.train()\n",
         "  for batch in iterator:\n",
         "    texts, text_lengths = batch.text # we have set inlude_lengths as True while defining data.TEXT\n",
