--- a/Sentiment_Analysis_using_LSTM_pytorch.ipynb
+++ b/Sentiment_Analysis_using_LSTM_pytorch.ipynb
@@ -486,11 +486,11 @@
       "source": [
         "class LSTMNetwork(nn.Module):\n",
         "  #input_size: size of input per time step, in this case size of xt\n",
-        "  def __init__(self, output_size, vocab_size, embedding_size, hidden_size, nlayers,dropout):\n",
+        "  def __init__(self, output_size, vocab_size, embedding_size, hidden_size, nlayers,dropout,padding_idx):\n",
         "    super(LSTMNetwork,self).__init__();\n",
         "    #embedding \n",
         "    #returns a matrix of size vocab_size x embedding_size\n",
-        "    self.embeds =  nn.Embedding(vocab_size, embedding_size)  \n",
+        "    self.embeds =  nn.Embedding(vocab_size, embedding_size,padding_idx = padding_idx)  \n",
         "\n",
         "\n",
         "    self.lstm = nn.LSTM(embedding_size, \n",
@@ -556,7 +556,7 @@
         "hidden_size = 400\n",
         "nlayers = 2\n",
         "dropout=0.4\n",
-        "model = LSTMNetwork(output_size, vocab_size, embedding_size, hidden_size, nlayers,dropout)"
+        "model = LSTMNetwork(output_size, vocab_size, embedding_size, hidden_size, nlayers,dropout, TEXT.vocab.stoi[TEXT.pad_token])"
       ],
       "execution_count": 74,
       "outputs": []
